2007-11-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-open-connection-setup-interactive-shell): Check
	whether the output of "uname -sr" has been changed.

2007-11-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-maybe-open-connection): Use a local copy of
	`process-environment'.

2007-11-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-substitute-in-file-name): Don't expand
	the remote connection identification.
	(tramp-find-shell, tramp-open-connection-setup-interactive-shell):
	Set also $PS2 and $PS3 when setting $PS1.  Check for shell echoing
	before calling stty.

	* tramp-cache.el (tramp-cache-print)
	(tramp-dump-connection-properties): Fix docstring.
	(tramp-list-connections): Renamed from
	`tramp-cache-list-connections'.

	* tramp-cmds.el (tramp-cleanup-connection): Apply it.

	* tramp-ftp.el (tramp-ftp-file-name-handler): Don't expand the
	remote connection identification when setting connection property.

	* tramp-smb.el (tramp-smb-handle-substitute-in-file-name): "//"
	substitutes only in the local filename part.

2007-11-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): Don't autoload `tramp-cache-print'.

	* tramp-cache (tramp-cache-print): Move down.
	(tramp-cache-list-connections): New defun.

	* tramp-cmds.el (tramp-cleanup-connection): Use it.

2007-11-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-wait-for-output): Ignore escape sequences in the
	prompt.

2007-10-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-shell-command): Call `start-file-process'
	directly.  Fix bug in deleting temp file.

2007-10-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-maybe-open-connection): Set $LC_ALL to "C".

	* tramp-cache.el (tramp-flush-file-function): Check also
	`default-directory' if `buffer-file-name' does not return a
	string.  Added to `eshell-pre-command-hook'.

2007-10-27  Michael Albinus  <michael.albinus@gmx.de>
