@@ -1,3 +1,15 @@
+2007-11-18  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-completion-reread-directory-timeout): New
+	defcustom.
+	(tramp-handle-file-name-all-completions): Flush directory contents
+	from cache regularly.
+	(tramp-set-auto-save-file-modes): Check also for
+	`buffer-modified-p'.
+
+	* tramp-ftp.el (tramp-ftp-file-name-handler): Temp file is already
+	created when copying.
+
 2007-11-12  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-open-connection-setup-interactive-shell): Check
